--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ squeeze/*
 squeeze-amd64/*
 *-base.tgz
 squeeze-i386/*
+wheezy-i386/*
+wheezy-amd64/*
+trusty-i386/*
+trusty-amd64/*
 
 #ccache
 ccache/*
